# aipanel

./: .gitignore  INSTALL.md  LICENSE  README.md  TESTING.md  aipanelctl  backup.sh  install.sh  logs.sh  mock-backend.mjs  restore.sh  status.sh  uninstall.sh  update.sh
dev/: README.md  aipanel.dev.conf  bootstrap_admin.py  docker-compose.yml  secrets.dev.env  start.ps1
dev/db-init/: 00-run-migrations.sh
embed-server/: pyproject.toml
embed-server/src/aipanel_embed/: __init__.py  config.py  main.py  model_loader.py
installer/cron/: aipanel-backup
installer/lib/: common.sh  config.sh  deps.sh  embed.sh  frontend.sh  join.sh  llm.sh  migrate.sh  minio.sh  models.sh  nginx.sh  nodejs.sh  nvidia.sh  ops.sh  panel.sh  pjsip.sh  postgres.sh  preflight.sh  python_env.sh  redis.sh  secrets.sh  session_mgr.sh  sip.sh  stt.sh  tts.sh  user.sh  workers.sh
installer/migrations/: 001_initial.down.sql  001_initial.sql  002_campaigns.down.sql  002_campaigns.sql  003_pgvector.down.sql  003_pgvector.sql  004_agent_training.down.sql  004_agent_training.sql  005_node_join.down.sql  005_node_join.sql
installer/nginx/: .gitkeep  aipanel.conf.template
installer/sudoers.d/: aipanel-update
installer/systemd/: .gitkeep  aipanel-embed.service  aipanel-jobs.service  aipanel-llm.service  aipanel-session-mgr.service  aipanel-sip.service  aipanel-stt.service  aipanel-tts.service  aipanel-web.service  aipanel-workers.service
installer/templates/: aipanel.conf.template
llm-server/: pyproject.toml  start.sh
llm-server/src/aipanel_llm/: __init__.py  config.py  launcher.py  main.py
panel/backend/: alembic.ini  pyproject.toml
panel/backend/alembic/: env.py
panel/backend/alembic/versions/: 0001_baseline.py
panel/backend/src/aipanel/: __init__.py  config.py  crypto.py  main.py
panel/backend/src/aipanel/api/: __init__.py
panel/backend/src/aipanel/api/v1/: __init__.py  agents.py  analytics.py  auth.py  calls.py  campaigns.py  cluster.py  deployments.py  kb.py  methodologies.py  system.py  tenants.py  updates.py  vicidial_servers.py  voices.py
panel/backend/src/aipanel/auth/: __init__.py  denylist.py  deps.py  jwt.py  permissions.py
panel/backend/src/aipanel/db/: __init__.py  base.py  session.py
panel/backend/src/aipanel/db/models/: __init__.py  _helpers.py  agents.py  calls.py  campaigns.py  ops.py  tenants.py  vici.py
panel/backend/src/aipanel/events/: __init__.py  publisher.py  sse.py
panel/backend/src/aipanel/integrations/: __init__.py  embed_client.py  llm_client.py  session_mgr_client.py  stt_client.py  tts_client.py
panel/backend/src/aipanel/jobs/: __init__.py  analytics_rollup_job.py  arq_worker.py  backup_job.py  campaign_mine_job.py  kb_ingest_job.py  voice_clone_job.py
panel/backend/src/aipanel/sales_lib/: __init__.py  data.py
panel/backend/src/aipanel/schemas/: __init__.py  agent.py  agent_dsl.py  analytics.py  auth.py  call.py  campaign.py  common.py  deployment.py  kb.py  methodology.py  system.py  tenant.py  vicidial.py  voice.py
panel/backend/src/aipanel/services/: __init__.py  agents_service.py  analytics_service.py  audit_service.py  campaigns_service.py  deployment_service.py  kb_service.py  voice_service.py
panel/backend/tests/: conftest.py  test_agents.py  test_auth.py  test_health.py
panel/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
panel/frontend/src/: main.tsx  router.tsx
panel/frontend/src/api/: client.ts  sse.ts
panel/frontend/src/api/hooks/: useAgents.ts  useAnalytics.ts  useAuth.ts  useCalls.ts  useCampaigns.ts  useDeployments.ts  useKb.ts  useMethodologies.ts  useSystem.ts  useTraining.ts  useUpdates.ts  useUsers.ts  useVicidialServers.ts  useVoices.ts
panel/frontend/src/auth/: ProtectedRoute.tsx  store.ts
panel/frontend/src/components/: AudioWaveform.tsx  EmptyState.tsx  LiveTranscript.tsx  LoadingSpinner.tsx  MethodologyPicker.tsx  PageHeader.tsx  StatusPill.tsx  VoiceRecorder.tsx
panel/frontend/src/layouts/: AppLayout.tsx  AuthLayout.tsx
panel/frontend/src/lib/: format.ts  permissions.ts  types.ts  utils.ts  validation.ts
panel/frontend/src/pages/: AgentDetail.tsx  AgentsList.tsx  Analytics.tsx  CallDetail.tsx  Calls.tsx  CampaignDetail.tsx  Campaigns.tsx  Dashboard.tsx  DeploymentDetail.tsx  Deployments.tsx  ErrorPage.tsx  KnowledgeBaseDetail.tsx  KnowledgeBases.tsx  Login.tsx  ViciDialServers.tsx  Voices.tsx
panel/frontend/src/styles/: globals.css
scripts/: bootstrap_admin.sh  e2e.sh  smoke_test_models.sh
session-mgr/: pyproject.toml
session-mgr/src/aipanel_vici/: __init__.py  api.py  config.py  heartbeat.py  http_session.py  logging_setup.py  login.py  main.py  metrics.py  models.py  session_supervisor.py  session_worker.py
session-mgr/src/aipanel_vici/adapters/: __init__.py  base.py  v2_14.py
session-mgr/tests/: test_adapter_v2_14.py  test_session_worker.py
sip/: pyproject.toml
sip/src/aipanel_sip/: __init__.py  account_manager.py  audio_bridge.py  call_handler.py  config.py  endpoint.py  header_parser.py  logging_setup.py  main.py  models.py  worker_dispatcher.py
sip/tests/: test_audio_bridge.py  test_header_parser.py
stt-server/: pyproject.toml
stt-server/src/aipanel_stt/: __init__.py  config.py  main.py  model_loader.py  streaming.py  transcribe.py
tests/e2e/: __init__.py  conftest.py  fake_services.py  fake_socket.py  fake_vicidial.py  test_pipeline.py
tts-server/: pyproject.toml
tts-server/src/aipanel_tts/: __init__.py  audio_codec.py  cloner.py  config.py  main.py  synthesizer.py  voice_store.py
tts-server/src/aipanel_tts/backends/: __init__.py  base.py  f5.py  kokoro.py  noop.py
workers/: pyproject.toml
workers/src/aipanel_worker/: __init__.py  audio_in.py  audio_out.py  barge_in.py  call_session.py  config.py  conversation.py  humanize.py  kb_search.py  logging_setup.py  main.py  methodologies.py  metrics.py  prompt_builder.py  recorder.py  sip_protocol.py  tools.py  transcript_writer.py  vici_client.py
workers/tests/: test_barge_in.py  test_humanize.py  test_prompt_builder.py  test_tools.py
(+25 files in other folders)
