[project]
name = "aipanel-session-mgr"
version = "0.6.0"
description = "ViciDial Session Manager — headless agent login pool + action API"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    # Playwright is the heavy dep — installer/lib/session_mgr.sh runs
    # `playwright install chromium` to drop the browser into
    # /var/lib/aipanel/playwright-browsers.
    "playwright>=1.40",
    "httpx[http2]>=0.27",
    "redis[hiredis]>=5.0,<6",
    "psycopg[binary,pool]>=3.1,<4",
    "pydantic>=2.5,<3",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "prometheus-client>=0.19",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",          # mock httpx for adapter tests
]

[project.scripts]
aipanel-session-mgr = "aipanel_vici.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
