[project]
name = "aipanel-sip"
version = "0.3.0"
description = "aipanel SIP layer — PJSIP-based registrar and call dispatcher"
requires-python = ">=3.11"
license = {text = "Proprietary"}

# pjsua2 is intentionally NOT listed here — it is built from source by
# installer/lib/pjsip.sh and dropped into this venv as a system-installed
# Python module (Python bindings + the matching .so). pip cannot install it.
dependencies = [
    "redis>=5.0,<6",
    "psycopg[binary]>=3.1,<4",
    "pydantic>=2.5,<3",
    "structlog>=24.1",
    "prometheus-client>=0.19",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
aipanel-sip = "aipanel_sip.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aipanel_sip = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
