[project]
name = "aipanel-stt"
version = "0.4.0"
description = "aipanel STT service — faster-whisper + silero-vad streaming"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "faster-whisper>=1.0,<2",
    # silero-vad >= 5.0 ships ONNX weights bundled with the wheel — no
    # network fetch needed at runtime, perfect for airgap.
    "silero-vad>=5.0",
    "onnxruntime>=1.17",
    "numpy>=1.26",
    "soundfile>=0.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.19",
    "pydantic>=2.5,<3",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "nvidia-ml-py>=12.535",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
aipanel-stt = "aipanel_stt.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
